<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.youtility.scene.signup.lastname.SignUpLastNameActivity">

    <include layout="@layout/toolbar" />

    <com.youtility.customview.CustomTextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/_45dp"
        android:layout_marginRight="@dimen/_45dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/last_name_head"
        android:textColor="@color/gray_blue_shade"
        android:textSize="@dimen/_20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_24dp"
        android:paddingRight="@dimen/_24dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/last_name"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:textColor="@color/gray_blue_shade"
                android:textSize="@dimen/_16sp" />

        </android.support.design.widget.TextInputLayout>


        <com.youtility.customview.CustomButton
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_50dp"
            android:layout_marginTop="@dimen/_80dp"
            android:layout_marginRight="@dimen/_50dp"
            android:layout_marginBottom="@dimen/basic_view_margin"
            android:background="@drawable/button_bg"
            android:enabled="false"
            android:fontFamily="@font/roboto_regular"
            android:paddingTop="@dimen/medium_margin"
            android:paddingBottom="@dimen/medium_margin"
            android:text="@string/text_continue"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>