<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.youtility.scene.signup.termsandprivacy.TermsAndPrivacyActivity">

    <ImageView
        android:id="@+id/image_view_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_5dp"
        android:layout_marginTop="@dimen/_3dp"
        android:padding="@dimen/_15dp"
        android:paddingTop="@dimen/_15dp"
        android:src="@drawable/close_medium_purple" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_view_close"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.youtility.customview.CustomTextView
                android:id="@+id/text_view_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/_45dp"
                android:layout_marginRight="@dimen/_45dp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/terms_and_privacy_head_text"
                android:textColor="@color/gray_blue_shade"
                android:textSize="@dimen/_20sp" />


            <RelativeLayout
                android:id="@+id/layout_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_view_head"
                android:layout_marginTop="@dimen/_40dp"
                android:paddingLeft="@dimen/_25dp"
                android:paddingTop="@dimen/_14dp"
                android:paddingRight="@dimen/_25dp"
                android:paddingBottom="@dimen/_14dp">

                <ImageView
                    android:id="@+id/image_view_terms_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/legal_terms_small_purple" />

                <com.youtility.customview.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_24dp"
                    android:layout_toEndOf="@+id/image_view_terms_icon"
                    android:layout_toRightOf="@+id/image_view_terms_icon"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/terms_of_service"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:rotation="-90"
                    android:src="@drawable/caret_down_medium_purple" />
            </RelativeLayout>

            <View
                android:id="@+id/divider_1"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@+id/layout_terms"
                android:background="@color/dividerColor" />

            <RelativeLayout
                android:id="@+id/layout_privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/divider_1"
                android:paddingLeft="@dimen/_25dp"
                android:paddingTop="@dimen/_14dp"
                android:paddingRight="@dimen/_25dp"
                android:paddingBottom="@dimen/_14dp">

                <ImageView
                    android:id="@+id/image_view_pricacy_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/legal_privacy_small_purple" />

                <com.youtility.customview.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_24dp"
                    android:layout_toEndOf="@+id/image_view_pricacy_icon"
                    android:layout_toRightOf="@+id/image_view_pricacy_icon"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:rotation="-90"
                    android:src="@drawable/caret_down_medium_purple" />
            </RelativeLayout>

            <View
                android:id="@+id/divider_2"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@+id/layout_privacy_policy"
                android:background="@color/dividerColor" />


            <LinearLayout
                android:id="@+id/layout_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/divider_2"
                android:layout_marginLeft="@dimen/_24dp"
                android:layout_marginTop="@dimen/_40dp"
                android:layout_marginRight="@dimen/_24dp"
                android:background="#f7f9fc"
                android:orientation="vertical"
                android:padding="@dimen/_14dp">

                <com.youtility.customview.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/how_do_we_make_money"
                    android:textColor="#455783"
                    android:textSize="@dimen/_12sp" />

                <com.youtility.customview.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/if_you_change"
                    android:textColor="#b3576b9d"
                    android:textSize="@dimen/_12sp" />
            </LinearLayout>


            <RelativeLayout
                android:id="@+id/btnAcceptTerms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_question"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/activity_horizontal_padding"
                android:layout_marginTop="@dimen/_40dp"
                android:layout_marginEnd="@dimen/activity_horizontal_padding"
                android:background="@drawable/rounded_transparent_strok_bg"
                android:paddingLeft="@dimen/_10dp"
                android:paddingTop="@dimen/_14dp"
                android:paddingRight="@dimen/_10dp"
                android:paddingBottom="@dimen/_14dp">

                <CheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:button="@drawable/check_box_tc" />

                <com.youtility.customview.CustomTextView
                    android:id="@+id/text_accept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/medium_view_margin"
                    android:layout_toEndOf="@+id/checkbox"
                    android:layout_toRightOf="@+id/checkbox"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="@string/I_accept_tc"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_14sp" />
            </RelativeLayout>

            <com.youtility.customview.CustomButton
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnAcceptTerms"
                android:layout_marginStart="@dimen/activity_horizontal_padding"
                android:layout_marginTop="@dimen/_20dp"
                android:layout_marginEnd="@dimen/activity_horizontal_padding"
                android:layout_marginBottom="@dimen/basic_view_margin"
                android:background="@drawable/button_bg"
                android:enabled="false"
                android:fontFamily="@font/roboto_regular"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/text_continue"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
